test/2-errors/tab.test
{
  'code' : 1,
  'err' : '''\
parse error: test/2-errors/tab.ploy:2:1: illegal tab character
    \t
    ^
'''
}
