test/2-errors/tab.ploy
# fail lexing due to tab character
	# <-- tab
